tests/NormalTests/paczka1/small_fuzzy/42332378.err
Error in line 3: OHEI A746 11,6
Error in line 9: v9K3bUq7 A746 63,5
